Reduce memory usage of daily crontabs